--- a/res/values/wallpapers.xml
+++ b/res/values/wallpapers.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- Provide a list of wallpaers -->
     <string-array name="wallpapers" translatable="false">
+        <item>wallpaper_00</item>
         <item>wallpaper_01</item>
         <item>wallpaper_02</item>
         <item>wallpaper_03</item>
@@ -65,5 +66,5 @@
     </string-array>
 
     <!-- This wallpaper will be used when a user applies the theme -->
-    <string name="default_wallpaper">wallpaper_57</string>
+    <string name="default_wallpaper">wallpaper_00</string>
 </resources>
